Web Inspector: AXI: crash when inspecting "bar" text node in getAccessibilityPropertiesForNode layout test https://bugs.webkit.org/show_bug.cgi?id=130290

Patch by James Craig <jcraig@apple.com> on 2014-03-26
Reviewed by Timothy Hatcher.

Source/WebCore:

Test: inspector-protocol/dom/getAccessibilityPropertiesForNode.html

Fixing regression from r165590. http://webkit.org/b/129779
Verify isElementNode to avoid calling toElement on document or text nodes.

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::buildObjectForAccessibilityProperties):

LayoutTests:

Updating test to include properties for document node.

* inspector-protocol/dom/getAccessibilityPropertiesForNode-expected.txt:
* inspector-protocol/dom/getAccessibilityPropertiesForNode.html:

Canonical link: https://commits.webkit.org/148817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166295 268f45cc-cd09-0410-ab3c-d52691b4dbfc